添加一个点

--- a/src/stylesheets/global.less
+++ b/src/stylesheets/global.less
@@ -3,6 +3,7 @@ html {
     margin: 0;
     background-color: #f8f8f8;
     font-size: 393px;
+    overflow: hidden;
 
     body {
         margin: 0;
