--- a/src/stylesheets/face.less
+++ b/src/stylesheets/face.less
@@ -6,6 +6,7 @@
     position: relative;
     //height: 100%;
     width: 100%;
+    max-width: 393px;
     //box-sizing: border-box;
     background-color: #f8f8f8;
     border-radius: 44px;
@@ -76,6 +77,4 @@
             border-radius: 8px;
         }
     }
-
-
 }
